# project-manager

./: .gitignore  .justfile  Cargo.toml  README.md
.sqlx/: query-2e92123cb838a6c6fa691d022c261d38e6bfd2f06ffb69c83a339701c1686b66.json  query-4ead5fc824abe30aba7f13b9c3993d984da6097bbee89d0f23e6c12d096cb4eb.json  query-59afe3b3d4b92b95783479e9224efe4479eb098685d09c91a97c913951efc2c8.json  query-66fd1fe79a581c2cd306842f2a784911e629500fc796ad7f5d428ec495ef93e0.json  query-6811dd8e8ef212b3cd3c8bf2bd9fe79f8614c6affd9deae6756322dbbf7c3532.json  query-716a594171d9acbc195273d58460ab8ac5ffd11b4e76292bfd2678bd6867d968.json  query-78bd81267721cbd09b901e034ecb862d9e10bf078ef3b1864dacfc97f237e94a.json  query-89231670c4a72465c203c7e3b6c6bf53d10fe52df18c89067ec6a9396fb8a194.json  query-d840b63269bc159bc368ac24d43899f6cf1454ca3136adb9a4c03b3969db2c8f.json  query-e9d45019496d4ff4d9dbccc9529712079fecd0ca516e9ee7614a25a54285f6d5.json
examples/: tasks-example.csv
migrations/: 20231117113405__task_tables.sql
src/: main.rs  project.rs
src/project/: earned_value.rs  mod.rs
