[package]
name = "project-manager"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Helgemo <jonas@jhel.no>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
anyhow = "1.0"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio-native-tls", "migrate"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4.31"
csv = "1.3.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_derive = "1.0"
colored = "2"
strum = { version = "0.25.0", features = [] }
titlecase = "2.2.1"
inquire = "0.6.2"
prettytable-rs = "0.10.0"
promptly = "0.3.1"
plotly = { version = "0.8.4", features = ["kaleido"] }
